# materialize

./: .bazelignore  .bazelrc  .bk.yaml  .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .mdlrc  .pre-commit-config.yaml  .requirements-precommit.txt  .rustfmt.toml  .shellcheckrc  .travis.yml  AGENTS.md  ARCH_REVIEW.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CLU-95-CONTINUATION.md  CMakeLists.txt  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MODULE.bazel  Makefile  PLAN.md  PROMPT.md  README  README.md  TODO  WORKSPACE  about.toml  bench_numeric_cast.py  benesch.json  (+171 more)
.cargo/: config  (+1 more)
demo/billing/: Cargo.toml  README.md  build.rs  mzcompose.py  mzcompose.yml  mzworkflows.py
demo/billing/ci/: .gitignore  Dockerfile  mzbuild.yml
demo/billing/resources/: billing.proto
demo/billing/src/: config.rs  error.rs  gen.rs  kafka_client.rs  macros.rs  main.rs  mz.rs  mz_client.rs  randomizer.rs
demo/mbtaupsert/: Cargo.toml  README.md  mzcompose.yml
demo/mbtaupsert/ci/: Dockerfile  mbta-demo-cmd.sh  mzbuild.yml
demo/mbtaupsert/demo/: README.md  all-frequent-routes-config-weekday  all-frequent-routes-config-weekend  all-frequent.sql
demo/mbtaupsert/doc/: README.md  mbta-reference.md  mbta-setup.md  mbtaupsert-doc.md
demo/mbtaupsert/src/: kafka_interaction.rs  main.rs
fuzz/: Cargo.toml  README.md  build_corpus.rs  sql.dict
fuzz/fuzz_targets/: fuzz_parse_statements.rs  fuzz_parse_time.rs  fuzz_sqllogictest.rs  fuzz_target_1.rs  fuzz_target_2.rs  fuzz_target_3.rs  fuzz_target_4.rs  fuzz_target_5.rs  fuzz_testdrive.rs
misc/dbt-materialize/: .dockerignore  .gitignore  CHANGELOG.md  CONTEXT.md  Dockerfile  MAINTAINERS.md  MANIFEST.in  README.md  mzbuild.yml  mzcompose.py  mzcompose.yml  mzworkflows.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
misc/dbt-materialize/dbt/: __init__.py
misc/dbt-materialize/test/: configure-postgres.td  materialize.dbtspec  tls-materialize.dbtspec
misc/dbt-materialize/tests/: conftest.py
misc/mcp-materialize/: Dockerfile  README.md  mzbuild.yml  mzcompose.py  pyproject.toml
misc/mcp-materialize-agents/: README.md  pyproject.toml
misc/mcp-materialize/materialize_mcp_server/: __init__.py  mz_client.py
misc/mcp-materialize/mcp_materialize/: __init__.py  config.py  mz_client.py  transports.py
misc/mcp-server/: Dockerfile  README.md  mzcompose.py  pyproject.toml
misc/mcp-server/materialize_mcp_server/: __init__.py  config.py  mz_client.py
play/json-flattened-view-gen/: Cargo.toml
play/json-flattened-view-gen/src/: main.rs
play/mbta/: Cargo.toml  README.md  mzcompose.py  mzcompose.yml  mzworkflows.py
play/mbta/ci/: .gitignore  Dockerfile  mbta-demo-cmd.sh  mzbuild.yml
play/mbta/doc/: README.md  mbta-reference.md  mbta-setup.md  mbta-to-mtrlz-doc.md
play/mbta/examples/: README.md  all-frequent-routes-config-weekday.csv  all-frequent-routes-config-weekend.csv  all-frequent.sql
play/mbta/src/: main.rs
src/adapter/: BUILD.bazel  CONTEXT.md  Cargo.toml
src/adapter-types/: BUILD.bazel  Cargo.toml
src/adapter-types/src/: bootstrap_builtin_cluster_config.rs  cluster_state.rs  compaction.rs  connection.rs  dyncfgs.rs  lib.rs  timestamp_oracle.rs  timestamp_selection.rs
src/adapter/benches/: catalog.rs
src/adapter/src/: CONTEXT.md  active_compute_sink.rs  catalog.rs  client.rs  command.rs  config.rs  continual_task.rs  coord.rs  copy_to.rs  error.rs  explain.rs  flags.rs  frontend_peek.rs  frontend_read_then_write.rs  lib.rs  metrics.rs  notice.rs  optimize.rs  peek_client.rs  peek_registry.rs  query_tracker.rs  rbac.rs  session.rs  severity.rs  sink_connection.rs  standing_query_client.rs  statement_logging.rs  subscribe.rs  tail.rs  telemetry.rs  util.rs  webhook.rs
src/adapter/tests/: builtin_migrations.rs  parameters.rs  sql.rs  timestamp_selection.rs
src/alloc/: BUILD.bazel  Cargo.toml
src/alloc-default/: BUILD.bazel  Cargo.toml
src/alloc-default/src/: lib.rs
src/alloc/src/: lib.rs
src/arrow-util/: BUILD.bazel  Cargo.toml
src/arrow-util/src/: builder.rs  lib.rs  reader.rs
src/audit-log/: BUILD.bazel  Cargo.toml
src/audit-log/src/: lib.rs
src/auth/: BUILD.bazel  Cargo.toml
src/auth/src/: group_claims.rs  hash.rs  lib.rs  password.rs
src/authenticator/: BUILD.bazel  Cargo.toml
src/authenticator-types/: Cargo.toml
src/authenticator-types/src/: lib.rs
src/authenticator/src/: lib.rs  oidc.rs  talos.rs
src/avro/: BUILD.bazel  CONTEXT.md  Cargo.toml  README.md  codec.rs  de.rs  decode.rs  encode.rs  lib.rs  reader.rs  schema.rs  types.rs  util.rs  writer.rs
src/avro-derive/: Cargo.toml
src/avro-derive/src/: lib.rs
src/avro/benches/: serde.rs  serde_json.rs  single.rs
src/avro/benches_/: serde.rs  serde_json.rs  single.rs
src/avro/examples/: benchmark.rs  to_value.rs
src/avro/fuzz/: Cargo.toml  corpus.dict  prepare-corpus.sh
src/avro/src/: CONTEXT.md  codec.rs  decode.rs  encode.rs  error.rs  lib.rs  reader.rs  schema.rs  types.rs  util.rs  writer.rs
src/avro/tests/: io.rs  schema.rs
src/aws-glue-schema-registry/: Cargo.toml
src/aws-glue-schema-registry/src/: client.rs  config.rs  lib.rs
src/aws-s3-util/: Cargo.toml
src/aws-s3-util/src/: lib.rs
src/aws-secrets-controller/: BUILD.bazel  Cargo.toml
src/aws-secrets-controller/src/: lib.rs
src/aws-util/: BUILD.bazel  Cargo.toml  aws.rs  kinesis.rs
src/aws-util/src/: aws.rs  client.rs  config.rs  dynamodb.rs  kinesis.rs  lib.rs  s3.rs  s3_uploader.rs  setup_test_env_mz.sh  sqs.rs  sts.rs  util.rs
src/balancerd/: BUILD.bazel  Cargo.toml
src/balancerd/ci/: .gitignore  Dockerfile  mzbuild.yml
src/balancerd/src/: codec.rs  dyncfgs.rs  lib.rs  main.rs  service.rs
src/balancerd/tests/: server.rs
src/billing-demo/: Cargo.toml  README.md  build.rs  docker-compose.yml  mzcompose.py
src/billing-demo/ci/: Dockerfile
src/billing-demo/resources/: billing.proto
src/billing-demo/src/: config.rs  error.rs  gen.rs  kafka_client.rs  macros.rs  main.rs  mz_client.rs  proto.rs  randomizer.rs
src/bogo-consensus/: Cargo.toml  build.rs
(+19641 files in other folders)
